[workspace]
members = [
    "node",
    "pallets/template",
    "runtime",
]
[profile.release]
panic = "unwind"

[patch."https://github.com/paritytech/substrate"]
fork-tree = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-benchmarking = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-benchmarking-cli = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-executive = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-remote-externalities = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-support = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-support-procedural = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-support-procedural-tools = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-support-procedural-tools-derive = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-system = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-system-benchmarking = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-system-rpc-runtime-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
frame-try-runtime = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-aura = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-authorship = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-balances = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-grandpa = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-session = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-sudo = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-timestamp = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-transaction-payment = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-transaction-payment-rpc = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-allocator = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-basic-authorship = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-block-builder = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-chain-spec = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-chain-spec-derive = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-cli = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-client-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-client-db = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-consensus = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-consensus-aura = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-consensus-grandpa = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-consensus-slots = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-executor = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-executor-common = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-executor-wasmtime = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-informant = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-keystore = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-bitswap = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-common = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-gossip = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-light = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-sync = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-network-transactions = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-offchain = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-proposer-metrics = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-rpc = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-rpc-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-rpc-server = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-rpc-spec-v2 = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-service = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-state-db = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-statement-store = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-sysinfo = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-telemetry = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-tracing = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-tracing-proc-macro = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-transaction-pool = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-transaction-pool-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sc-utils = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-api = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-api-proc-macro = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-application-crypto = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-arithmetic = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-block-builder = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-blockchain = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-consensus = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-consensus-aura = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-consensus-babe = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-consensus-grandpa = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-consensus-slots = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-core = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-core-hashing = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-core-hashing-proc-macro = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-database = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-debug-derive = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-externalities = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-inherents = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-io = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-keyring = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-keystore = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-maybe-compressed-blob = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-metadata-ir = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-offchain = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-panic-handler = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-rpc = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-runtime = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-runtime-interface = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-runtime-interface-proc-macro = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-session = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-staking = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-state-machine = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-statement-store = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-std = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-storage = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-timestamp = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-tracing = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-transaction-pool = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-transaction-storage-proof = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-trie = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-version = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-version-proc-macro = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-wasm-interface = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
sp-weights = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
substrate-build-script-utils = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
substrate-frame-rpc-system = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
substrate-prometheus-endpoint = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
substrate-rpc-client = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
substrate-wasm-builder = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
try-runtime-cli = { git = "https://github.com/cdamian/substrate", branch = "polkadot-v1.0.0-p2p-test-auth-config" }
